--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 blog_theme: dark # Or use dark
 name: Alex's Blog
 paginate: 25
-url: https://eqalex.github.io/
+url: https://clibequilibrium.github.io/
 
 
 # Optional settings
